--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,8 @@ textarea {
                 }
             }
 
-            
+            <div class="mt-8 text-center">
+                <a href="#" class="w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
             // Consultation button handler
             document.getElementById('consultationButton').addEventListener('click', function(e) {
                 e.preventDefault();
@@ -1223,7 +1224,7 @@ textarea {
                 formData.append('Notes', notes);
     
                 // Submit to FormSubmit.co (replace your-email@example.com with your actual email)
-                fetch('https://formsubmit.co/your-email@example.com', {
+                fetch('https://formsubmit.co/admin@litnum.org', {
                     method: 'POST',
                     body: formData
             })
